--- a/bower.json
+++ b/bower.json
@@ -22,7 +22,8 @@
     "underscore": "~1.8",
     "i18next": "~1.8",
     "json3": "latest",
-    "jquery": "~2.1"
+    "jquery": "~2.1",
+    "moment": "~2.9"
   },
   "devDependencies": {
     "requirejs": "~2.1",
