--- a/bower.json
+++ b/bower.json
@@ -23,7 +23,8 @@
     "i18next": "~1.8",
     "json3": "latest",
     "jquery": "~2.1",
-    "moment": "~2.9"
+    "moment": "~2.9",
+    "async": "~0.9"
   },
   "devDependencies": {
     "requirejs": "~2.1",
